--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "react": "18.1.0",
     "react-native": "0.70.1",
+    "react-native-gesture-handler": "^2.6.2",
     "react-native-safe-area-context": "^4.3.4",
     "react-native-screens": "^3.17.0",
+    "react-native-vector-icons": "^9.2.0",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4",
-    "reactotron-react-native": "^5.0.2"
+    "reactotron-react-native": "^5.0.2",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
